# cabin_booking/api_spec.json
@@ -123,8 +123,11 @@
       "schema": {
         "type": "object",
         "properties": {
-          "cabin_id": {
-            "type": "string"
+          "cabin_ids": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            }
           },
           "start_date": {
             "type": "string",
@@ -133,10 +136,6 @@
           "end_date": {
             "type": "string",
             "format": "date"
-          },
-          "time_slot": {
-            "type": "string",
-            "format": "time"
           }
         },
         "required": [
@@ -157,24 +156,16 @@
           "purpose": {
             "type": "string"
           },
+          "cabin_id": {
+            "type": "string"
+          },
           "start_date": {
             "type": "string",
-            "format": "date"
+            "format": "date-time"
           },
           "end_date": {
             "type": "string",
-            "format": "date"
-          },
-          "time_slots": {
-            "type": "array",
-            "items": {
-              "properties": {
-                "slots": {
-                  "type": "string",
-                  "format": "date-time"
-                }
-              }
-            }
+            "format": "date-time"
           }
         },
         "required": [
@@ -332,7 +323,7 @@
         "type": "array",
         "items": {
           "properties": {
-            "floor": {
+            "floor_name": {
               "type": "string"
             },
             "cabins": {
@@ -387,11 +378,7 @@
               "items": {
                 "type": "object",
                 "properties": {
-                  "start_date": {
-                    "type": "string",
-                    "format": "date-time"
-                  },
-                  "end_date": {
+                  "slots": {
                     "type": "string",
                     "format": "date-time"
                   },
@@ -455,7 +442,7 @@
         }
       }
     },
-    "/user/profile": {
+    "/user/profile/v1": {
       "get": {
         "summary": "Get User Details",
         "operationId": "Get_user",
@@ -507,7 +494,7 @@
         }
       }
     },
-    "/get/cabin_details": {
+    "/get/cabin_details/v1": {
       "get": {
         "summary": "Get floor wise cabin details",
         "operationId": "get_cabin_details",
@@ -521,7 +508,7 @@
         }
       }
     },
-    "/get/cabin/slots": {
+    "/get/cabin_slots/v1": {
       "get": {
         "summary": "Get Cabin wise slots",
         "operationId": "get_cabin_slots",
@@ -540,7 +527,7 @@
         }
       }
     },
-    "/confirm/slots": {
+    "/confirm_slots/v1": {
       "post": {
         "summary": "confirm slots",
         "operationId": "confirm_slots",
@@ -559,7 +546,7 @@
         }
       }
     },
-    "/user/booked/slots": {
+    "/user/booked_slots/v1": {
       "get": {
         "summary": "Get User who booked slots",
         "operationId": "user_booked_slots",
@@ -578,7 +565,7 @@
         }
       }
     },
-    "/user/profile/update": {
+    "/user/profile_update/v1": {
       "post": {
         "summary": "Update the user Profile",
         "operationId": "update_the_user_profile",
