# cabin_booking/views.py
@@ -1,12 +1,22 @@
+from http.client import responses
+
 from rest_framework.decorators import api_view, authentication_classes, permission_classes
 from django.http import HttpResponse
 
-
+from cabin_booking.databases.booking_db import BookingDB
+from cabin_booking.databases.cabin_db import CabinDB
+from cabin_booking.databases.user_authentication_db import UserAuthentication
 from cabin_booking.databases.user_db import UserDB
+from cabin_booking.interactors.cabin_confirm_slots_interactor import ConfirmSlotInteractor
+from cabin_booking.interactors.cabins_details_interactor import CabinDetailsInteractor
+from cabin_booking.interactors.get_cabin_wise_slots_interactor import CabinWiseSlotsInteractor
 from cabin_booking.interactors.login_interactors import LoginInteractor
 from cabin_booking.interactors.profile_interactor import ProfileInteractor
 from cabin_booking.interactors.signup_interactor import SignupInteractor
 from cabin_booking.interactors.update_password_interactor import UpdatePasswordInteractor
+from cabin_booking.responses.cabin_confirm_slots_response import ConfirmSlotResponse
+from cabin_booking.responses.cabin_details_response import CabinDetailsResponse
+from cabin_booking.responses.get_cabins_slots_response import CabinSlotsDetailsResponse
 from cabin_booking.responses.update_password_response import UpdatePasswordResponse
 from cabin_booking.responses.login_interactor_response import LoginInteractorResponse
 from cabin_booking.responses.profile_interactor_response import ProfileInteractorResponse
@@ -19,7 +29,8 @@ from cabin_booking.responses.signup_interactor_response import SignupInteractorR
 def get_login_interactor_view(request):
     email = request.data.get("email")
     password = request.data.get("password")
-    response = LoginInteractor(storage=UserDB(), response=LoginInteractorResponse()).login_interactor(email, password)
+    response = LoginInteractor(storage=UserDB(), response=LoginInteractorResponse(),
+                               authentication=UserAuthentication()).login_interactor(email, password)
     return response
 
 
@@ -28,7 +39,7 @@ def get_login_interactor_view(request):
 @permission_classes([])
 def get_signup_interactor_view(request):
     email = request.data.get("email")
-    password = request.data.get("Password")
+    password = request.data.get("password")
     username = request.data.get("username")
     first_name = request.data.get("first_name")
     last_name = request.data.get("last_name")
@@ -48,11 +59,9 @@ def get_signup_interactor_view(request):
 @api_view(['GET'])
 def get_user_profile_api_view(request):
     user_id = request.data.get('user_id')
-    if not user_id:
-        return HttpResponse({'error_code': "invalid_user", "error_message": "invalid User"})
     user_profile_dto = ProfileInteractor(storage=UserDB(),
                                          response=ProfileInteractorResponse()).get_user_details_profile_interactor(
-        user_id=user_id)
+        user_id=str(user_id))
     return user_profile_dto
 
 
@@ -62,7 +71,51 @@ def get_update_password_view(request):
     password = request.data.get('password')
     new_password = request.data.get('new_password')
     response = UpdatePasswordInteractor(storage=UserDB(),
-                                         response=UpdatePasswordResponse()).update_password_interactor(email=email,
-                                                                                                       password=password,
-                                                                                                       new_password=new_password)
+                                        response=UpdatePasswordResponse()).update_password_interactor(email=email,
+                                                                                                      password=password,
+                                                                                                      new_password=new_password)
+    return response
+
+
+@api_view(['GET'])
+def get_cabin_details_view(request):
+    response = CabinDetailsInteractor(storage=CabinDB(), response=CabinDetailsResponse()).get_floor_wise_cabins_list()
+    return response
+
+
+@api_view(["GET"])
+def get_cabin_wise_slots_view(request):
+    """
+            {
+          "cabin_ids": [
+            "string"
+          ],
+          "start_date": "2024-09-12",
+          "end_date": "2024-09-12"
+        }
+    """
+    cabin_ids = request.data.get('cabin_ids')
+    # print(cabin_ids)
+    start_date = request.data.get('start_date')
+    end_date = request.data.get('end_date')
+    response = CabinWiseSlotsInteractor(storage=BookingDB(user_db_storage=UserDB()),
+                                        response=CabinSlotsDetailsResponse()).get_cabin_slots_interactor(
+        cabin_ids=cabin_ids, start_date=start_date,
+        end_date=end_date)
+    return response
+
+
+@api_view(["POST"])
+def get_cabin_confirm_slot_view(request):
+    cabin_id = request.data.get('cabin_id')
+    user_id = request.user.user_id
+    start_date = request.data.get('start_date')
+    end_date = request.data.get('end_date')
+    purpose = request.data.get('purpose')
+    response = ConfirmSlotInteractor(storage=BookingDB(user_db_storage=UserDB()), user_db_storage=UserDB(),
+                                     response=ConfirmSlotResponse()).confirm_slot_interactor(
+        cabin_id=cabin_id,
+        start_date=start_date,
+        end_date=end_date, purpose=purpose,
+        user_id=user_id)
     return response
